[gd_scene load_steps=2 format=3 uid="uid://x8q8ao0ngfav"]

[ext_resource type="Script" path="res://main.gd" id="1_68fpp"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_68fpp")

[node name="AskQuestion" type="HTTPRequest" parent="."]

[node name="CreateDiglog" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="AskQuestion" to="." method="_on_ask_question_request_completed"]
[connection signal="request_completed" from="CreateDiglog" to="." method="_on_create_diglog_request_completed"]
